[update] fix demo so that we can run on IE9 what: why: how:

--- a/demo/base/index.css
+++ b/demo/base/index.css
@@ -5,9 +5,12 @@ html, body {
 }
 
 .node {
+  width: 100%;
   width: 100vw;
+  height: 100px;
   height: 50vh;
   text-align: center;
+  line-height: 100px;
   line-height: 50vh;
   font-size: 5rem;
   color: #F5F5F5;
